Added mail sender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.freemarker.expose-request-attributes=true
 
 upload.path=D:/projects/java/IDEA/Spring/SpringLessions/thought/uploads
 
+spring.mail.host=smtp.mailtrap.io
+spring.mail.username=e6ec588ed85dd8
+spring.mail.password=ec26b686688ec3
+spring.mail.port=2525
+
+mail.debug=true;
